--- a/index.html
+++ b/index.html
@@ -3,9 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- ========== SOCIAL MEDIA LINK PREVIEWS ========== -->
+    <!-- Basic SEO -->
+    <meta name="description"
+        content="A growing ecosystem of modular, serverless-powered tools — crafted for builders, creators, and innovators.">
+    <meta name="keywords"
+        content="serverless, tools, workbench, screenshot, image optimizer, pdf merger, developer tools">
+    <meta name="author" content="Serverless-Workbench">
+
+    <!-- Open Graph (Facebook, LinkedIn, WhatsApp, etc.) -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://teddymazuri.github.io/Serverless-Workbench/">
+    <meta property="og:title" content="Serverless-Workbench | Serverless Tools for Builders and Dreamers.">
+    <meta property="og:description"
+        content="A growing ecosystem of modular, serverless-powered tools — crafted for builders, creators, and innovators.">
+    <meta property="og:image" content="https://teddymazuri.github.io/Serverless-Workbench/assets/social-preview.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Serverless-Workbench: Serverless Tools for Builders and Dreamers.">
+    <meta property="og:site_name" content="Serverless-Workbench">
+    <meta property="og:locale" content="en_US">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://teddymazuri.github.io/Serverless-Workbench/">
+    <meta name="twitter:title" content="Serverless-Workbench | Serverless Tools for Builders and Dreamers.">
+    <meta name="twitter:description"
+        content="A growing ecosystem of modular, serverless-powered tools — crafted for builders, creators, and innovators.">
+    <meta name="twitter:image" content="https://teddymazuri.github.io/Serverless-Workbench/assets/social-preview.png">
+    <meta name="twitter:image:alt" content="Serverless-Workbench: Serverless Tools for Builders and Dreamers.">
+
+
+
     <title>Serverless Workbench | Home</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="css/main.css">
+
+    <!-- ========== FAVICONS ========== -->
+    <link rel="icon" type="image/png" href="assets/Serverless-Workbench-favicon.png">
+
 </head>
 <body class="bg-gradient-to-br from-slate-50 to-slate-100 min-h-screen">
     <!-- Navigation -->
@@ -30,11 +67,11 @@
     <section class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-20">
         <div class="text-center">
             <h1 class="text-5xl md:text-6xl font-extrabold text-slate-800 tracking-tight mb-6">
-                Build serverless tools
-                <span class="text-indigo-600 block mt-2">faster, together.</span>
+                Serverless Tools
+                <span class="text-indigo-600 block mt-2">for Builders and Dreamers.</span>
             </h1>
             <p class="text-xl text-slate-600 max-w-3xl mx-auto mb-10">
-                A growing collection of modular, serverless-ready utilities. Each tool is independently built with its own stack — ready for deployment anywhere.
+                A growing ecosystem of modular, serverless-powered tools — crafted for builders, creators, and innovators.
             </p>
             <div class="flex gap-4 justify-center">
                 <a href="#tools" class="bg-indigo-600 hover:bg-indigo-700 text-white px-8 py-3 rounded-lg font-medium transition shadow-lg shadow-indigo-200">Browse Tools →</a>
