--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <h3 class="text-xl font-bold text-slate-800 mb-3">Screenshotter</h3>
                     <p class="text-slate-600 mb-6">Capture any URL with headless Playwright. Supports PNG, JPEG, PDF with multiple viewports.</p>
                     <div class="flex items-center justify-between">
-                        <span class="text-xs font-mono bg-slate-100 px-3 py-1 rounded-full">serverless</span>
+                        <span class="text-xs font-mono bg-slate-100 px-3 py-1 rounded-full">headless-playwrite</span>
                         <a href="tools/screenshotter/" class="text-indigo-600 hover:text-indigo-800 font-medium inline-flex items-center gap-1">
                             Launch tool <span class="text-lg">→</span>
                         </a>
