--- a/tools/screenshotter/index.html
+++ b/tools/screenshotter/index.html
@@ -46,7 +46,7 @@
                         <div class="flex items-center space-x-2 mt-1">
                             <span class="text-sm text-slate-500">Capture webpages with precision</span>
                             <span class="w-1 h-1 bg-slate-300 rounded-full"></span>
-                            <span class="text-xs font-mono bg-slate-100 px-2 py-1 rounded-full text-slate-600">Headless Playwright</span>
+                            <span class="text-xs font-mono bg-slate-100 px-2 py-1 rounded-full text-slate-600">headless playwright</span>
                         </div>
                     </div>
                 </div>
