--- a/tools/optimizer/index.html
+++ b/tools/optimizer/index.html
@@ -46,7 +46,7 @@
                         <div class="flex items-center space-x-2 mt-1">
                             <span class="text-sm text-slate-500">Smart compression · WebP · AVIF · Real-time preview</span>
                             <span class="w-1 h-1 bg-slate-300 rounded-full"></span>
-                            <span class="text-xs font-mono bg-slate-100 px-2 py-1 rounded-full text-slate-600">v2.0</span>
+                            <span class="text-xs font-mono bg-slate-100 px-2 py-1 rounded-full text-slate-600">client-side</span>
                         </div>
                     </div>
                 </div>
